[package]
name = "somebdd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "cucumber"
harness = false

[dependencies]
cucumber_rust = "0.9"
hyper = { version = "0.14.13", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.12.0", features = ["full"] }
regex = "1.3.9"
futures = "0.3.5"
serde = "1.0.130"
serde_json = "1.0"
spectral = "0.6.0"
hmac = "0.11.0"
crypto-hashes = "0.9.0"
sha2 = "0.9.8"
base64 = "0.13.0"
